[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Manager_Audio/Demo/Demo.gd" type="Script" id=1]
[ext_resource path="res://audio/pip.mp3" type="AudioStream" id=2]
[ext_resource path="res://audio/test_music_cc0.ogg" type="AudioStream" id=3]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 359.0
margin_top = 251.0
margin_right = 664.0
margin_bottom = 349.0
custom_constants/separation = 22

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 81.0
margin_bottom = 98.0
custom_constants/separation = 10

[node name="Btn_Play_sound" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_right = 81.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
mouse_default_cursor_shape = 2
text = "Play sound"
align = 0

[node name="Btn_Play_music" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 81.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 44 )
mouse_default_cursor_shape = 2
text = "Play music"
align = 0

[node name="Btn_Stop_music" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 108.0
margin_right = 93.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 44 )
mouse_default_cursor_shape = 2
disabled = true
text = "Pause music"

[node name="VBoxContainer4" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 103.0
margin_right = 194.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer4"]
margin_right = 91.0
margin_bottom = 14.0
text = "music volume"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/HBoxContainer/VBoxContainer4"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 34.0

[node name="Label2" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
margin_top = 1.0
margin_right = 8.0
margin_bottom = 15.0
text = "0"

[node name="HSlider" type="HSlider" parent="CenterContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 12.0
margin_right = 79.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.2
value = 1.0
tick_count = 6

[node name="Label" type="Label" parent="CenterContainer/HBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 83.0
margin_top = 1.0
margin_right = 91.0
margin_bottom = 15.0
text = "1"

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 216.0
margin_right = 305.0
margin_bottom = 98.0
custom_constants/separation = 10

[node name="Btn_AllStop" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer3"]
margin_right = 89.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 44 )
mouse_default_cursor_shape = 2
text = "All pause"
align = 0

[node name="Btn_AllContinue" type="Button" parent="CenterContainer/HBoxContainer/VBoxContainer3"]
margin_top = 54.0
margin_right = 89.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 44 )
mouse_default_cursor_shape = 2
text = "All continue"

[node name="AudioStreamPlayer_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AudioStreamPlayer_pip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Btn_Play_sound" to="." method="_on_Btn_Play_sound_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Btn_Play_music" to="." method="_on_Btn_Play_music_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/Btn_Stop_music" to="." method="_on_Btn_Stop_music_pressed"]
[connection signal="value_changed" from="CenterContainer/HBoxContainer/VBoxContainer4/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer3/Btn_AllStop" to="." method="_on_Btn_AllStop_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer3/Btn_AllContinue" to="." method="_on_Btn_AllContinue_pressed"]
